--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker-compose -p projectname -f docker-compose.yml build $@
+docker-compose -p boilerplate -f docker-compose.yml build $@
